# DM-project2

./: .gitattributes  LICENSE  README.md  download_data.py  environment.yml  pyproject.toml  requirements.txt  samples.ipynb  setup.cfg  setup.py
.github/workflows/: python-package.yml
data/: raw.dvc
dm_project2/: baseline.py  clustering.py  data_preprocessing.py  dataset.py  load_data.py  main.py  predict.py  preprocessing.py  rules_predictor.py  samples.ipynb  sandbox.ipynb  test.py
notebooks/: clustering_test.ipynb  context.py  test.ipynb
tests/: __init__.py  context.py  test.py  test_dataset.py  test_predict.py
