# setup.cfg
[metadata]
name = dm_project2
version = 0.1.0
author = Piotr Balewski, Adam Dobosz, Wiktor Kamzela, Michał Redmer
author_email = your.email@example.com
description = A data mining project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MichalRedm/DM-project2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = =3.6
install_requires =
    pandas
    numpy
    scikit-learn
    matplotlib
